name:                kryptonight
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kejace/kryptonight#readme
license:             BSD3
license-file:        LICENSE
author:              Kristoffer Josefsson 
maintainer:          kejace@gmail.com
copyright:           2017 Kristoffer Josefsson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , openpgp-asciiarmor
  default-language:    Haskell2010

executable kryptonight-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kryptonight
                     , openpgp-asciiarmor
                     , optparse-applicative
  default-language:    Haskell2010

test-suite kryptonight-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kryptonight
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kejace/kryptonight
